rust/crates/proj/src/functions/iso19111/snapshots/proj__functions__iso19111__context_advanced__test_context_advanced__create_cartesian_2d_cs.snap
---
source: crates/proj/src/functions/iso19111/context_advanced.rs
expression: wkt
---
CS[Cartesian,2],
    AXIS["(E)",east,
        ORDER[1],
        LENGTHUNIT["",1]],
    AXIS["(N)",north,
        ORDER[2],
        LENGTHUNIT["",1]]
