rust/crates/proj/src/functions/iso19111/snapshots/proj__functions__iso19111__context_advanced__test_context_advanced__create_conversion.snap
---
source: crates/proj/src/functions/iso19111/context_advanced.rs
expression: wkt
---
CONVERSION["conv",
    METHOD["method",
        ID["method auth","method code"]],
    PARAMETER["",0.99],
    ID["conv auth","conv code"]]
